--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 
+# Optional
+.classpath
+.project
+.log4j.xml
