--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,16 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+
+		<!-- Lombok -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-maven-plugin -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok-maven-plugin</artifactId>
+			<version>1.18.12.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
